syntax = "proto3";

option go_package = "./rpc";

message AccountCreateReq {
  string Password = 1;
}

message AccountCreateRes {
  string Address = 1;
}

message AccountBalanceReq {
  string Address = 1;
}

message AccountBalanceRes {
  uint64 Balance = 1;
}

service Account {
  rpc AccountCreate(AccountCreateReq) returns (AccountCreateRes);
  rpc AccountBalance(AccountBalanceReq) returns (AccountBalanceRes);
}
